[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "meok-attestation-verify"
version = "1.0.2"
description = "Tiny zero-dependency verifier for MEOK AI Labs compliance attestations (DORA, NIS2, CRA, EU AI Act, CSRD, AI-BOM, Gods Eye). Pipe a signed cert on stdin, get VALID/INVALID back. HMAC-SHA256. By MEOK AI Labs."
license = {file = "LICENSE"}
readme = "README.md"
requires-python = ">=3.8"
authors = [{name = "MEOK AI Labs", email = "nicholas@meok.ai"}]
keywords = ["meok", "attestation", "compliance", "verify", "signed-certificate", "dora", "nis2", "cra", "eu-ai-act", "csrd", "ai-bom", "audit-evidence", "hmac", "trust-center"]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Topic :: Security",
  "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = []

[project.urls]
Homepage = "https://meok.ai"
Verify = "https://meok-attestation-api.vercel.app"
Repository = "https://github.com/CSOAI-ORG/meok-attestation-verify"

[tool.hatch.build.targets.wheel]
packages = ["."]
only-include = ["meok_attestation_verify.py"]

[project.scripts]
meok-attestation-verify = "meok_attestation_verify:main"
meok-verify = "meok_attestation_verify:main"
